Spectrum analyzer is on onl 1 screen

--- a/Dopamine/Views/MiniPlayer/MicroPlayer.xaml
+++ b/Dopamine/Views/MiniPlayer/MicroPlayer.xaml
@@ -11,7 +11,6 @@
                               xmlns:prismMvvm="clr-namespace:Prism.Mvvm;assembly=Prism.Wpf"
                               mc:Ignorable="d"
                               d:DesignHeight="300" d:DesignWidth="300"
-                              Loaded="CommonMiniPlayerView_Loaded"
                               prismMvvm:ViewModelLocator.AutoWireViewModel="True"
                               Background="{DynamicResource Brush_WindowHeaderBackground}">
 
@@ -92,10 +91,7 @@
             </Grid>
             <DockPanel x:Name="ControlsPanel">
                 <commonviews:PlaybackInfoControl DockPanel.Dock="Top" Height="50" Width="286" Margin="20,10,0,0" TitleFontSize="22" TitleFontWeight="Light" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                <Grid>
-                    <commonviews:SpectrumAnalyzerControl x:Name="SpectrumAnalyzer" Panel.ZIndex="0" VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
-                    <commonviews:MicroPlayerControls Panel.ZIndex="1" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                </Grid>
+                <commonviews:MicroPlayerControls VerticalAlignment="Center" HorizontalAlignment="Center"/>
             </DockPanel>
         </DockPanel>
         <commonviews:ProgressControlsThin Panel.ZIndex="1" VerticalAlignment="Bottom" Height="16" Margin="0"/>
