--- a/Dopamine/Views/MiniPlayer/CoverPlayer.xaml
+++ b/Dopamine/Views/MiniPlayer/CoverPlayer.xaml
@@ -10,7 +10,6 @@
                               xmlns:prismMvvm="clr-namespace:Prism.Mvvm;assembly=Prism.Wpf"
                               mc:Ignorable="d"
                               d:DesignHeight="300" d:DesignWidth="300"
-                              Loaded="CommonMiniPlayerView_Loaded"
                               prismMvvm:ViewModelLocator.AutoWireViewModel="True"
                               Background="{DynamicResource Brush_WindowHeaderBackground}">
 
@@ -118,9 +117,6 @@
         <!-- Progress bar -->
         <commonviews:ProgressControls Height="14" Margin="0,-6,0,0"/>
         <!-- Controls -->
-        <Grid>
-            <commonviews:SpectrumAnalyzerControl x:Name="SpectrumAnalyzer" Panel.ZIndex="0" VerticalAlignment="Bottom"  HorizontalAlignment="Left"/>
-            <commonviews:CoverPlayerControls Panel.ZIndex="1" Margin="0,-3,0,0" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        </Grid>
+        <commonviews:CoverPlayerControls Margin="0,-3,0,0" VerticalAlignment="Center" HorizontalAlignment="Center"/>
     </StackPanel>
 </baseviews:MiniPlayerViewBase>
