--- a/Dopamine/Views/Shell.xaml
+++ b/Dopamine/Views/Shell.xaml
@@ -10,6 +10,7 @@
                               xmlns:cp="clr-namespace:Dopamine.Core.Prism;assembly=Dopamine.Core"
                               xmlns:prismMvvm="clr-namespace:Prism.Mvvm;assembly=Prism.Wpf"
                               xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+                              xmlns:commonviews="clr-namespace:Dopamine.Views.Common"
                               mc:Ignorable="d"
                               Title="{Binding TaskbarService.Description}" 
                               TitleBarHeight="48"
@@ -126,8 +127,11 @@
                 </Viewbox>
             </Border>
             <Border Panel.ZIndex="0" Background="{DynamicResource Brush_MainWindowBackground}">
-                <pc:TransitioningContentControl Panel.ZIndex="0" x:Name="PlayerTypeRegion" FadeIn="True" FadeInTimeout="0.5" 
+                <Grid>
+                    <pc:TransitioningContentControl Panel.ZIndex="0" x:Name="PlayerTypeRegion" FadeIn="True" FadeInTimeout="0.5" 
                                             prism:RegionManager.RegionName="{x:Static cp:RegionNames.PlayerTypeRegion}"/>
+                    <commonviews:SpectrumAnalyzerControl x:Name="SpectrumAnalyzer" Panel.ZIndex="1" VerticalAlignment="Bottom" HorizontalAlignment="Left" SizeChanged="SpectrumAnalyzer_SizeChanged"/>
+                </Grid>
             </Border>
         </Grid>
     </Border>
